# kSZ-reconstruction

./: .gitignore  README.md  pyproject.toml  wrapper.py
archive/: README.md  ksz_pipeline.py
functions/: analysis_with_cmb.py  cmb_power_spectrum_check.py  generate_all_plots.py  ksz_21cmfast_simulated_wedge_filtered.py  ksz_21cmfast_xhi_evolution.py  ksz_21cmfast_xhi_evolution_ensemble.py  ksz_21cmfast_xhi_evolution_multiple.py  ksz_reconstruction_lightcone_analysis.py  plot_21cm_filter.py  quadratic_estimator.py  quadratic_estimator_backup.py
ksz_core/: .gitignore  README.md  pyproject.toml
ksz_core/src/ksz_core/: __init__.py  cosmology.py  fft.py  plotting.py  reconstruction.py
ksz_core/src/ksz_core/diagnostics/: __init__.py  correlation.py  jackknife.py
ksz_core/src/ksz_core/loaders/: __init__.py  grizzly.py
ksz_core/src/ksz_core/noise/: __init__.py  hera.py
ksz_core/tests/: test_cosmology.py  test_diagnostics.py  test_fft.py  test_grizzly.py  test_plotting.py  test_reconstruction.py
ksz_reconstruction/: data_raghu  pyproject.toml
ksz_reconstruction/archive/: README.md
ksz_reconstruction/functions/: generate_all_plots.py
noise_analysis/: README.md  data_grizzly  pyproject.toml
noise_analysis/notebooks/: 03_uv_sweep.ipynb  04_grizzly_uv_sweep.ipynb  05_unet_21cm_to_vz.ipynb  06_eor_evolution.ipynb
noise_analysis/notes/: MEETING_NOTES.md  NOTEBOOK_06_WRITEUP.md  THEORY_NOTES.md  theory_notes.tex
noise_analysis/scripts/: appendix_b_model_dependence.py  run_model_dependence.py
noise_analysis/src/: cmb_noise.py  grizzly.py  noise_filters.py
noisy_reconstruction/: INSTALL_SUPERCOMPUTER.txt  README.md  pyproject.toml
noisy_reconstruction/code/: __init__.py  pipeline.py
noisy_reconstruction/code/ml/: __init__.py  config.py  dataset.py  linear_rec.py  noise.py  run_xhi_sweep.py  simulate.py  train.py  unet3d.py
noisy_reconstruction/notebooks/ml/: 00_smoketest.ipynb  README.md  ml_pipeline_demo.ipynb  ml_pipeline_linear_rec_demo.ipynb  ml_pipeline_sweep_xhi.ipynb
non_gaussian/: README.md  data_nikos  pyproject.toml
non_gaussian/21cmfast_ksz_eor/: README.md  ksz.py  plotting.py  requirements.txt  run_pipeline.ipynb
non_gaussian/notebooks/: 04_ksz_non_gaussianity.ipynb  coeval_ksz_nongauss.ipynb  grizzly_ksz.ipynb  will.ipynb
non_gaussian/notes/: SCOPE.md
notebooks/: ksz_analysis_updates.py  ksz_intensity.ipynb  ksz_map_comparison.ipynb  test_wedge.ipynb
