[project]
name = "ksz-core"
version = "0.2.0"
description = "Shared utilities for the kSZ × 21cm research stack — cosmology, Grizzly loaders, linear continuity reconstruction, HERA noise builder, diagnostics, FFT-grid helpers."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "astropy>=5.0",
]

[project.optional-dependencies]
hera = [
    "21cmsense",
]
plotting = [
    "matplotlib>=3.5",
]
dev = [
    "pytest>=7.0",
    "matplotlib>=3.5",
]

[tool.uv.sources]
21cmsense = { git = "https://github.com/rasg-affiliates/21cmSense", rev = "fast-hist" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ksz_core"]
