[project]
name = "ksz-reconstruction"
version = "0.1.0"
description = "Paper-side analysis code: kSZ × 21cm cross-correlation pipeline that produced the MNRAS draft."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ksz-core",
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.5",
    "astropy>=5.0",
    "powerbox>=0.8",
    "jupyter>=1.0",
]
